--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "next": "^15.1.6",
     "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
