--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^9",
     "eslint-config-next": "^15.1.6",
     "postcss": "^8.4.24",
+    "sharp": "^0.34.5",
     "tailwindcss": "^3.3.2",
     "typescript": "^5"
   }
